--- a/vivek_moningi_nn.ipynb
+++ b/vivek_moningi_nn.ipynb
@@ -73,7 +73,7 @@
         "from tensorflow.keras import layers\n",
         "from tensorflow.keras.models import Sequential"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -91,7 +91,7 @@
         "drive.mount('/content/gdrive')\n",
         "##Ref:https://towardsdatascience.com/downloading-datasets-into-google-drive-via-google-colab-bcb1b30b0166"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -122,7 +122,7 @@
         "data_dir_train = pathlib.Path(\"gdrive/MyDrive/Upgrad Course/Skin cancer ISIC The International Skin Imaging Collaboration/Train\")\n",
         "data_dir_test = pathlib.Path('gdrive/MyDrive/Upgrad Course/Skin cancer ISIC The International Skin Imaging Collaboration/Test')"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -140,7 +140,7 @@
         "image_count_test = len(list(data_dir_test.glob('*/*.jpg')))\n",
         "print(image_count_test)"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -184,7 +184,7 @@
         "img_height = 180\n",
         "img_width = 180"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -217,7 +217,7 @@
         "  image_size=(img_height, img_width),\n",
         "  batch_size=batch_size)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -250,7 +250,7 @@
         "  image_size=(img_height, img_width),\n",
         "  batch_size=batch_size)"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -278,7 +278,7 @@
         "class_names = train_ds.class_names\n",
         "print(class_names)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -321,7 +321,7 @@
         "    plt.title(class_names[labels[i]])\n",
         "    plt.axis(\"off\")"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -367,7 +367,7 @@
         "train_ds = train_ds.cache().shuffle(1000).prefetch(buffer_size=AUTOTUNE)\n",
         "val_ds = val_ds.cache().prefetch(buffer_size=AUTOTUNE)"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -393,7 +393,7 @@
         "id": "tErwjPzgxX5u",
         "outputId": "51e13961-caad-4dd4-bd7d-b9bb1a30a9f1"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -426,7 +426,7 @@
         "  layers.Dense(num_classes, activation = 'softmax')\n",
         "])"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -450,7 +450,7 @@
         "              loss=tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True),\n",
         "              metrics=['accuracy'])"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -466,7 +466,7 @@
         "# View the summary of all layers\n",
         "model.summary()"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -539,7 +539,7 @@
         "  epochs=epochs\n",
         ")"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -645,7 +645,7 @@
         "plt.title('Training and Validation Loss')\n",
         "plt.show()"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -673,7 +673,7 @@
         "id": "gEQRaalJbPcX",
         "outputId": "9afe3dcb-84fb-43d1-d3f1-114b4eb81c5b"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -737,7 +737,7 @@
         "  ]\n",
         ")"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -761,7 +761,7 @@
         "        plt.imshow(augmented_images[0].numpy().astype('uint8'))\n",
         "        plt.axis('off')"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -813,7 +813,7 @@
         "  layers.Dense(num_classes, activation = 'softmax')\n",
         "])"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -836,7 +836,7 @@
         "              loss=tf.losses.SparseCategoricalCrossentropy(from_logits=True),\n",
         "              metrics=['accuracy'])"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -865,7 +865,7 @@
         "  epochs=epochs\n",
         ")\n"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -971,7 +971,7 @@
         "plt.title('Training and Validation Loss')\n",
         "plt.show()"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1008,7 +1008,7 @@
         "id": "NTlxm-2UCv8B",
         "outputId": "56660658-7926-4362-f16e-59457accd983"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1076,7 +1076,7 @@
         "original_df = pd.DataFrame(list(dataframe_dict.items()),columns = ['Path','Label'])\n",
         "original_df['Label'].value_counts()"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1141,7 +1141,7 @@
       "source": [
         "!pip install Augmentor"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1187,7 +1187,7 @@
         "    p.rotate(probability=0.7, max_left_rotation=10, max_right_rotation=10)\n",
         "    p.sample(500) ## We are adding 500 samples per class to make sure that none of the classes are sparse."
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1348,7 +1348,7 @@
         "image_count_train = len(list(data_dir_train.glob('*/output/*.jpg')))\n",
         "print(image_count_train)"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1382,7 +1382,7 @@
         "path_list = [x for x in glob(os.path.join(data_dir_train, '*','output', '*.jpg'))]\n",
         "path_list[:2]"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1410,7 +1410,7 @@
         "lesion_list_new = [os.path.basename(os.path.dirname(os.path.dirname(y))) for y in glob(os.path.join(data_dir_train, '*','output', '*.jpg'))]\n",
         "lesion_list_new[:5]"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1436,7 +1436,7 @@
       "source": [
         "dataframe_dict_new = dict(zip(path_list, lesion_list_new))"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1448,7 +1448,7 @@
         "df2 = pd.DataFrame(list(dataframe_dict_new.items()),columns = ['Path','Label'])\n",
         "new_df = original_df.append(df2)"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1463,7 +1463,7 @@
       "source": [
         "new_df['Label'].value_counts()"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1514,7 +1514,7 @@
         "img_height = 180\n",
         "img_width = 180"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1544,7 +1544,7 @@
         "  image_size=(img_height, img_width),\n",
         "  batch_size=batch_size)"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1583,7 +1583,7 @@
         "  image_size = (img_height, img_width),\n",
         "  batch_size = batch_size)"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1627,7 +1627,7 @@
         "  layers.Dense(num_classes, activation = 'softmax')\n",
         "])"
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1650,7 +1650,7 @@
         "              loss=tf.losses.SparseCategoricalCrossentropy(from_logits=True),\n",
         "              metrics=['accuracy'])"
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1680,7 +1680,7 @@
         "  epochs=epochs\n",
         ")"
       ],
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1818,8 +1818,7 @@
       "metadata": {
         "id": "lCTXwfkTdRW1",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 336
+          "base_uri": "https://localhost:8080/"
         },
         "outputId": "7fee3362-c608-494e-d6b0-cccbbff622e5"
       },
@@ -1846,7 +1845,7 @@
         "plt.title('Training and Validation Loss')\n",
         "plt.show()"
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1875,11 +1874,22 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Got rid of underfitting. Now training and validation accuracies are higher than previous model"
+        "Got rid of underfitting. Now training and validation accuracies are higher than previous model and performing better"
       ],
       "metadata": {
         "id": "5sXGlGw7Xcwf"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "U_0mPS3uQShA"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
